#189
further updates to thyemleaf and service classes for cas 7.0 upgrade